fix(card-group): correct spacing for copy paragraph in FF

--- a/packages/styles/scss/components/card/_card.scss
+++ b/packages/styles/scss/components/card/_card.scss
@@ -141,9 +141,13 @@
 
     .#{$prefix}--card__heading,
     .#{$prefix}--card__copy {
-      @include content-width;
-
       color: $text-primary;
+      max-inline-size: to-rem(640px);
+      padding-inline-end: 10%;
+
+      @include breakpoint(md) {
+        padding-inline-end: $spacing-07;
+      }
     }
 
     .#{$prefix}--card__copy:not([hidden]) {
